syntax = "proto3";

option csharp_namespace = "CKANServer";

package ckan;

service CKANServer {
    // Get the version of CKAN
    rpc GetVersion (GetVersionRequest) returns (GetVersionReply);
    // Performs a single action on the server.
    // If the server needs more information to complete the action, the client
    // must follow up with additional `ContinueRequest` messages.
    rpc ProcessAction (stream ActionMessage) returns (stream ActionReply);
}

message GetVersionRequest {}

message GetVersionReply {
    // The version of CKAN in SemVer format
    string version = 1;
    // The product name of the software (e.g. "CKAN")
    string product_name = 2;
}

message ActionMessage {
    oneof request {
        ContinueRequest continue_request = 1;
        InstancesListRequest instances_list_request = 2;
    }
}

message ContinueRequest {
    oneof value {
        // Response to a yes/no prompt
        bool yes_or_no = 1;
        // Response to a selection prompt
        uint32 index = 2;
    }
}

message ActionReply {
    message Prompt {
        // The prompt to display to the user
        string message = 1;
        // The default option to select, if any
        optional uint32 default_index = 2;
        // A list of options for the user to select.
        // If empty, the user must answer yes or no to the prompt.
        repeated string options = 3;
    }

    message Progress {
        // The message associated with the progress
        optional string message = 1;
        // The percentage of completion, from 0 to 100
        uint32 value = 3;
    }
    
    oneof status {
        // A message to display to the user
        string message = 1;
        // An error message to display to the user
        string errorMessage = 2;
        // An update on the progress of the transaction
        Progress progress = 3;
        // A prompt for the user to respond to
        Prompt prompt = 4;

        // The request failed.
        FailureMessage failure = 5;
        // The reply to a list request
        InstancesListReply instances_list_reply = 6;
    }
}

message FailureMessage {
    string message = 1;
}

message Game {
    string id = 1;
    
    message Version {
        optional int32 major = 1;
        optional int32 minor = 2;
        optional int32 patch = 3;
        optional int32 build = 4;
    }
}

// # Instances 

message Instance {
    string directory = 1;
    string gameId = 2;
    // Guaranteed to be unique
    string name = 3;
    Game.Version gameVersion = 4;
}

enum InstanceOperationResult {
    IOR_SUCCESS = 0;
    // Some required data wasn't specified.
    IOR_MISSING_DATA = 1;
    // This instance name is already taken.
    IOR_DUPLICATE_INSTANCE = 2;
    // The directory specified is not a game instance.
    IOR_NOT_AN_INSTANCE = 3;
    // There is no instance with this name or at this path.
    IOR_INSTANCE_NOT_FOUND = 4;
    // Generic clone failure
    IOR_CLONE_FAILED = 5;
    // The clone target must not already exist.
    IOR_CLONE_TARGET_EXISTS = 6;
    // The game requested to be faked is not supported.
    IOR_FAKER_UNKNOWN_GAME = 7;
    // The version requested to be faked is not supported.
    IOR_FAKER_UNKNOWN_VERSION = 8;
    // The version requested to be faked is too old to support one of the requested DLCs.
    IOR_FAKER_VERSION_TOO_OLD = 9;
    // Generic game fake failure
    IOR_FAKER_FAILED = 10;
}

message InstancesListRequest {}
message InstancesListReply {
    repeated Instance instances = 1;
}

message InstancesAddRequest {
    string name = 1;
    string directory = 2;
}
message InstancesAddReply {
    InstanceOperationResult result = 1;
}

message InstanceCloneRequest {
    string name = 1;
    string newName = 3;
    string newDirectory = 4;
    bool createSymlinksForStockDirs = 5;
}
message InstanceCloneReply {
    InstanceOperationResult result = 1;
    optional string errorDetails = 2;
}

message InstanceRenameRequest {
    string oldName = 1;
    string newName = 2;
}
message InstanceRenameReply {
    InstanceOperationResult result = 1;
}

message InstanceForgetRequest {
    string name = 1;
}
message InstanceForgetReply {
    InstanceOperationResult result = 1;
}

message InstanceSetDefaultRequest {
    string name = 1;
}
message InstanceSetDefaultReply {
    InstanceOperationResult result = 1;
}

message InstanceFakeRequest {
    string name = 1;
    string directory = 2;
    Game.Version version = 3;
    string gameId = 4;
    optional Game.Version makingHistoryVersion = 5;
    optional Game.Version breakingGroundVersion = 6;
    bool useAsNewDefault = 7;
}

message InstanceFakeReply {
    InstanceOperationResult result = 1;
}
